--- a/Pages/Index.razor.css
+++ b/Pages/Index.razor.css
@@ -1,3 +1,14 @@
-h1 {
-    color: red;
+#Title {
+    padding-top: 50px;
+    text-align: center;
+}
+
+#CommandArea {
+    padding-left: 10vw;
+    padding-right: 10vw;
+}
+
+
+#CommandTextbox {
+    width: 100%;
 }
